extract checkpoint gc job into AbstractKVEngine, and consider old enough checkpoint as gc'able candidate